More efficient colab file downloading and extraction code with more trackers.

--- a/colab_patch.ipynb
+++ b/colab_patch.ipynb
@@ -11,50 +11,214 @@
    },
    "outputs": [],
    "source": [
-    "import libtorrent as lt\n",
-    "import time\n",
+    "# CELL 1: SETUP\n",
+    "from google.colab import drive\n",
+    "import os\n",
+    "import shutil\n",
     "\n",
-    "# List of high-traffic trackers to \"poke\" the internet\n",
-    "trackers = [\n",
+    "# 1. Mount Google Drive\n",
+    "print(\"Mounting Google Drive...\")\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "# 2. Define and Create Output Folder\n",
+    "output_dir = \"/content/drive/MyDrive/Processed_Reddit_Data\"\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "# 3. Clean Workspace (Just in case)\n",
+    "raw_dir = \"/content/raw_data\"\n",
+    "if os.path.exists(raw_dir):\n",
+    "    shutil.rmtree(raw_dir)\n",
+    "os.makedirs(raw_dir, exist_ok=True)\n",
+    "\n",
+    "# 4. Permissions Test\n",
+    "test_file = os.path.join(output_dir, \"access_test.txt\")\n",
+    "try:\n",
+    "    with open(test_file, 'w') as f:\n",
+    "        f.write(\"System Ready.\")\n",
+    "    print(f\"SUCCESS: Connected to {output_dir}\")\n",
+    "    print(\"You are safe to run the Master Script below.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"ERROR: Cannot write to Drive. Reason: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22993535",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ==============================================================================\n",
+    "# FINAL TURBO SCRIPT: ARIA2C DOWNLOADER + AUTO EXTRACTION\n",
+    "# ==============================================================================\n",
+    "import os\n",
+    "import shutil\n",
+    "import zstandard as zstd\n",
+    "import json\n",
+    "import csv\n",
+    "import io\n",
+    "import time\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "from google.colab import drive\n",
+    "\n",
+    "# --- 1. SETUP ENV ---\n",
+    "print(\"🔌 Mounting Google Drive...\")\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "print(\"🛠 Installing aria2c (High-Speed Downloader)...\")\n",
+    "os.system(\"apt-get install aria2 -y\")\n",
+    "\n",
+    "# --- 2. CONFIGURATION ---\n",
+    "WINDOW_SECONDS = 14 * 24 * 60 * 60  # 14 days\n",
+    "OUTPUT_DIR = \"/content/drive/MyDrive/Processed_Reddit_Data\"\n",
+    "RAW_DIR = \"/content/raw_data\"\n",
+    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
+    "\n",
+    "# Tracker Boost (Helps find peers faster)\n",
+    "TRACKERS = [\n",
     "    \"udp://tracker.opentrackr.org:1337/announce\",\n",
     "    \"udp://9.rarbg.com:2810/announce\",\n",
     "    \"udp://tracker.openbittorrent.com:6969/announce\",\n",
     "    \"http://tracker.openbittorrent.com:80/announce\",\n",
-    "    \"udp://exodus.desync.com:6969\",\n",
-    "    \"udp://open.stealth.si:80/announce\",\n",
-    "    \"udp://tracker.torrent.eu.org:451/announce\"\n",
+    "    \"udp://opentracker.i2p.rocks:6969/announce\",\n",
+    "    \"udp://tracker.internetwarriors.net:1337/announce\",\n",
+    "    \"udp://tracker.leechers-paradise.org:6969/announce\",\n",
+    "    \"udp://coppersurfer.tk:6969/announce\",\n",
+    "    \"udp://tracker.zer0day.to:1337/announce\"\n",
+    "]\n",
+    "TRACKER_STR = \"\".join([f\"&tr={t}\" for t in TRACKERS])\n",
+    "\n",
+    "# The \"Strict\" Schedule (No bleed-overs)\n",
+    "TASKS = [\n",
+    "    {\n",
+    "        \"month\": \"JAN\",\n",
+    "        \"hash\": \"4fd14d4c3d792e0b1c5cf6b1d9516c48ba6c4a24\",\n",
+    "        \"targets\": { \"MacMiller\": [1737072000], \"TheWeeknd\": [1738281600] }\n",
+    "    },\n",
+    "    {\n",
+    "        \"month\": \"FEB\",\n",
+    "        \"hash\": \"2f873e0b15da5ee29b63e586c0ab1dedd3508870\",\n",
+    "        \"targets\": { \"TheWeeknd\": [1738281600], \"drizzy\": [1739491200] }\n",
+    "    },\n",
+    "    {\n",
+    "        \"month\": \"MAR\",\n",
+    "        \"hash\": \"bec5590bd3bc6c0f2d868f36ec92bec1aff4480e\",\n",
+    "        \"targets\": { \"playboicarti\": [1741910400] }\n",
+    "    },\n",
+    "    {\n",
+    "        \"month\": \"AUG\",\n",
+    "        \"hash\": \"b6a7ccf72368a7d39c018c423e01bc15aa551122\",\n",
+    "        \"targets\": { \"SabrinaCarpenter\": [1724371200] }\n",
+    "    },\n",
+    "    {\n",
+    "        \"month\": \"SEP\",\n",
+    "        \"hash\": \"e5a1c4d2b3f9e8d7c6b5a4f3e2d1c0b9a8f7e6d5\",\n",
+    "        \"targets\": { \"SabrinaCarpenter\": [1724371200], \"TaylorSwift\": [1727913600] }\n",
+    "    },\n",
+    "    {\n",
+    "        \"month\": \"OCT\",\n",
+    "        \"hash\": \"9d8e7f6a5b4c3d2e1f0a9b8c7d6e5f4a3b2c1d0e\",\n",
+    "        \"targets\": { \"TaylorSwift\": [1727913600], \"TameImpala\": [1729123200] }\n",
+    "    }\n",
     "]\n",
     "\n",
-    "def download_torrent_boosted(magnet_hash):\n",
-    "    ses = lt.session()\n",
-    "    ses.listen_on(6881, 6891)\n",
-    "    \n",
-    "    # Append trackers to your hash to make it a \"Loud\" magnet link\n",
-    "    tracker_str = \"\".join([f\"&tr={t}\" for t in trackers])\n",
-    "    full_magnet = f\"magnet:?xt=urn:btih:{magnet_hash}{tracker_str}\"\n",
-    "    \n",
-    "    params = {'save_path': '/content/raw_data'}\n",
-    "    handle = lt.add_magnet_uri(ses, full_magnet, params)\n",
-    "    \n",
-    "    print(f\"🧲 Attempting to find peers for {magnet_hash}...\")\n",
-    "    \n",
-    "    start_time = time.time()\n",
-    "    while not handle.has_metadata():\n",
-    "        s = handle.status()\n",
-    "        # This will tell you if you are even seeing other computers\n",
-    "        print(f\"Searching... | Peers: {s.num_peers} | Time: {int(time.time() - start_time)}s\", end='\\r')\n",
-    "        time.sleep(2)\n",
-    "        if time.time() - start_time > 300: # 5 minute limit for metadata\n",
-    "            print(\"\\n❌ No peers found after 5 mins. The university server might be offline.\")\n",
-    "            return None\n",
+    "# --- 3. HELPER FUNCTIONS ---\n",
+    "def clean_workspace():\n",
+    "    if os.path.exists(RAW_DIR):\n",
+    "        shutil.rmtree(RAW_DIR)\n",
+    "    os.makedirs(RAW_DIR, exist_ok=True)\n",
     "\n",
-    "    print(\"\\n✅ Metadata Found! Starting Download...\")\n",
-    "    # ... rest of the download logic ...\n",
-    "    return handle\n",
+    "def process_zst_files(targets):\n",
+    "    zst_files = list(Path(RAW_DIR).rglob(\"*.zst\"))\n",
+    "    if not zst_files:\n",
+    "        print(\"   ERROR: Download finished but no .zst files found.\")\n",
+    "        return\n",
     "\n",
-    "# Try January again with the boost\n",
-    "download_torrent_boosted(\"4fd14d4c3d792e0b1c5cf6b1d9516c48ba6c4a24\")"
+    "    for file_path in zst_files:\n",
+    "        print(f\"   Scanning {file_path.name}...\")\n",
+    "        match_count = 0\n",
+    "        line_count = 0\n",
+    "        \n",
+    "        with open(file_path, 'rb') as f:\n",
+    "            dctx = zstd.ZstdDecompressor()\n",
+    "            with dctx.stream_reader(f) as reader:\n",
+    "                stream = io.TextIOWrapper(reader, encoding='utf-8', errors='ignore')\n",
+    "                for line in stream:\n",
+    "                    line_count += 1\n",
+    "                    if line_count % 1000000 == 0:\n",
+    "                        sys.stdout.write(f\"\\r      Lines: {line_count//1000000}M | Matches: {match_count}\")\n",
+    "                        sys.stdout.flush()\n",
+    "                    \n",
+    "                    try:\n",
+    "                        obj = json.loads(line)\n",
+    "                        sub = obj.get('subreddit')\n",
+    "                        \n",
+    "                        if sub in targets:\n",
+    "                            ts = int(obj.get('created_utc', 0))\n",
+    "                            for release_ts in targets[sub]:\n",
+    "                                if (release_ts - WINDOW_SECONDS) <= ts <= (release_ts + WINDOW_SECONDS):\n",
+    "                                    match_count += 1\n",
+    "                                    out_file = os.path.join(OUTPUT_DIR, f\"{sub}_MASTER.csv\")\n",
+    "                                    exists = os.path.isfile(out_file)\n",
+    "                                    \n",
+    "                                    with open(out_file, 'a', newline='', encoding='utf-8') as csvfile:\n",
+    "                                        writer = csv.writer(csvfile)\n",
+    "                                        if not exists:\n",
+    "                                            writer.writerow(['utc', 'text', 'score', 'album_date'])\n",
+    "                                        \n",
+    "                                        content = obj.get('body') or f\"{obj.get('title', '')} {obj.get('selftext', '')}\"\n",
+    "                                        clean_text = \" \".join(content.split())\n",
+    "                                        writer.writerow([ts, clean_text, obj.get('score', 0), release_ts])\n",
+    "                    except: continue\n",
+    "        print(f\"\\n   Finished {file_path.name}. Saved {match_count} items.\")\n",
+    "\n",
+    "# --- 4. MAIN EXECUTION LOOP ---\n",
+    "for task in TASKS:\n",
+    "    print(f\"\\n==========================================\")\n",
+    "    print(f\" PROCESSING MONTH: {task['month']}\")\n",
+    "    print(f\"==========================================\")\n",
+    "    \n",
+    "    # A. PREP\n",
+    "    clean_workspace()\n",
+    "    \n",
+    "    # B. DOWNLOAD (ARIA2C)\n",
+    "    print(f\" Downloading {task['month']} via aria2c...\")\n",
+    "    magnet = f\"magnet:?xt=urn:btih:{task['hash']}{TRACKER_STR}\"\n",
+    "    \n",
+    "    # -x 16: 16 connections per server (Aggressive)\n",
+    "    # --seed-time=0: Stop seeding immediately (Save bandwidth)\n",
+    "    cmd = f'aria2c --dir=\"{RAW_DIR}\" --seed-time=0 --allow-overwrite=true --summary-interval=30 -x 16 -s 16 \"{magnet}\"'\n",
+    "    os.system(cmd)\n",
+    "    \n",
+    "    # C. EXTRACT\n",
+    "    process_zst_files(task['targets'])\n",
+    "    \n",
+    "    # D. CLEANUP\n",
+    "    clean_workspace()\n",
+    "    print(f\"{task['month']} Data Wiped. Ready for next month.\")\n",
+    "\n",
+    "print(\"\\n JOB DONE! CHECK GOOGLE DRIVE. \")\n",
+    "# Beep when done\n",
+    "from google.colab import output\n",
+    "output.eval_js('new Audio(\"https://upload.wikimedia.org/wikipedia/commons/0/05/Beep-09.ogg\").play()')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d0c46ac",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
