Addded smart resume code

--- a/colab_patch.ipynb
+++ b/colab_patch.ipynb
@@ -211,6 +211,211 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1097a3de",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ==============================================================================\n",
+    "#  SMART RESUME SCRIPT: AUTO-DETECTS PROGRESS FROM DRIVE\n",
+    "# ==============================================================================\n",
+    "import os\n",
+    "import shutil\n",
+    "import zstandard as zstd\n",
+    "import json\n",
+    "import csv\n",
+    "import io\n",
+    "import sys\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "from google.colab import drive\n",
+    "\n",
+    "# 1. SETUP\n",
+    "print(\"🔌 Mounting Google Drive...\")\n",
+    "drive.mount('/content/drive')\n",
+    "print(\"🛠 Installing aria2c...\")\n",
+    "os.system(\"apt-get install aria2 -y\")\n",
+    "\n",
+    "OUTPUT_DIR = \"/content/drive/MyDrive/Processed_Reddit_Data\"\n",
+    "RAW_DIR = \"/content/raw_data\"\n",
+    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
+    "os.makedirs(RAW_DIR, exist_ok=True)\n",
+    "\n",
+    "# 2. HELPER: FIND LAST TIMESTAMP\n",
+    "def get_last_timestamp(filepath):\n",
+    "    \"\"\"Reads the CSV to find the very last UTC timestamp processed.\"\"\"\n",
+    "    if not os.path.exists(filepath) or os.stat(filepath).st_size == 0:\n",
+    "        return 0\n",
+    "    try:\n",
+    "        # Read only the 'utc' column to be fast\n",
+    "        df = pd.read_csv(filepath, usecols=['utc'])\n",
+    "        if df.empty: return 0\n",
+    "        return int(df['utc'].max())\n",
+    "    except:\n",
+    "        return 0\n",
+    "\n",
+    "# 3. TASK LIST (The Full Schedule)\n",
+    "TASKS = [\n",
+    "    {\n",
+    "        \"month\": \"FEB\",\n",
+    "        \"magnet\": \"magnet:?xt=urn:btih:2f873e0b15da5ee29b63e586c0ab1dedd3508870&tr=udp://tracker.opentrackr.org:1337/announce\",\n",
+    "        \"targets\": { \n",
+    "            \"theweeknd\": [1738281600],\n",
+    "            \"drizzy\": [1739491200]\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"month\": \"MAR\",\n",
+    "        \"magnet\": \"magnet:?xt=urn:btih:bec5590bd3bc6c0f2d868f36ec92bec1aff4480e&tr=udp://tracker.opentrackr.org:1337/announce\",\n",
+    "        \"targets\": { \"playboicarti\": [1741910400] }\n",
+    "    },\n",
+    "    {\n",
+    "        \"month\": \"AUG\",\n",
+    "        \"magnet\": \"magnet:?xt=urn:btih:b6a7ccf72368a7d39c018c423e01bc15aa551122&tr=udp://tracker.opentrackr.org:1337/announce\",\n",
+    "        \"targets\": { \"sabrinacarpenter\": [1724371200] }\n",
+    "    },\n",
+    "    {\n",
+    "        \"month\": \"SEP\",\n",
+    "        \"magnet\": \"magnet:?xt=urn:btih:e5a1c4d2b3f9e8d7c6b5a4f3e2d1c0b9a8f7e6d5&tr=udp://tracker.opentrackr.org:1337/announce\",\n",
+    "        \"targets\": { \"sabrinacarpenter\": [1724371200], \"taylorswift\": [1727913600] }\n",
+    "    },\n",
+    "    {\n",
+    "        \"month\": \"OCT\",\n",
+    "        \"magnet\": \"magnet:?xt=urn:btih:9d8e7f6a5b4c3d2e1f0a9b8c7d6e5f4a3b2c1d0e&tr=udp://tracker.opentrackr.org:1337/announce\",\n",
+    "        \"targets\": { \"taylorswift\": [1727913600], \"tameimpala\": [1729123200] }\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "WINDOW_SECONDS = 14 * 24 * 60 * 60 \n",
+    "\n",
+    "# --- MAIN EXECUTION ---\n",
+    "for task in TASKS:\n",
+    "    print(f\"\\n==========================================\")\n",
+    "    print(f\"🎬 PROCESSING MONTH: {task['month']}\")\n",
+    "    print(f\"==========================================\")\n",
+    "\n",
+    "    # A. DETECT PROGRESS (The Smart Part)\n",
+    "    # We create a dictionary of where we left off for each artist\n",
+    "    progress_checkpoints = {}\n",
+    "    print(f\"   📊 Checking existing progress in Drive...\")\n",
+    "    \n",
+    "    finished_count = 0\n",
+    "    for sub, release_dates in task['targets'].items():\n",
+    "        # Clean filename logic\n",
+    "        if sub == \"theweeknd\": clean_name = \"TheWeeknd\"\n",
+    "        elif sub == \"drizzy\": clean_name = \"Drizzy\"\n",
+    "        elif sub == \"playboicarti\": clean_name = \"PlayboiCarti\"\n",
+    "        elif sub == \"sabrinacarpenter\": clean_name = \"SabrinaCarpenter\"\n",
+    "        elif sub == \"taylorswift\": clean_name = \"TaylorSwift\"\n",
+    "        elif sub == \"tameimpala\": clean_name = \"TameImpala\"\n",
+    "        else: clean_name = sub\n",
+    "        \n",
+    "        filepath = os.path.join(OUTPUT_DIR, f\"{clean_name}_MASTER.csv\")\n",
+    "        last_ts = get_last_timestamp(filepath)\n",
+    "        progress_checkpoints[sub] = last_ts\n",
+    "        print(f\"      -> {clean_name}: Resuming from timestamp {last_ts}\")\n",
+    "        \n",
+    "    # B. DOWNLOAD (If needed)\n",
+    "    # Check if raw file exists (unlikely after reset, but checking anyway)\n",
+    "    raw_exists = list(Path(RAW_DIR).rglob(\"*.zst\"))\n",
+    "    \n",
+    "    if not raw_exists:\n",
+    "        print(f\"   ⬇️ Downloading {task['month']} (Sorry, must re-download)...\")\n",
+    "        if os.path.exists(RAW_DIR): shutil.rmtree(RAW_DIR)\n",
+    "        os.makedirs(RAW_DIR, exist_ok=True)\n",
+    "        cmd = f'aria2c --dir=\"{RAW_DIR}\" --seed-time=0 --allow-overwrite=true --summary-interval=30 -x 16 -s 16 \"{task[\"magnet\"]}\"'\n",
+    "        os.system(cmd)\n",
+    "    else:\n",
+    "        print(f\" Found existing file! Skipping download.\")\n",
+    "\n",
+    "    # C. SMART EXTRACTION\n",
+    "    print(f\"   🛠 Scanning & Fast-Forwarding...\")\n",
+    "    zst_files = list(Path(RAW_DIR).rglob(\"*.zst\"))\n",
+    "    if not zst_files: continue\n",
+    "        \n",
+    "    for file_path in zst_files:\n",
+    "        match_count = 0\n",
+    "        skip_count = 0\n",
+    "        line_count = 0\n",
+    "        \n",
+    "        with open(file_path, 'rb') as f:\n",
+    "            dctx = zstd.ZstdDecompressor()\n",
+    "            with dctx.stream_reader(f) as reader:\n",
+    "                stream = io.TextIOWrapper(reader, encoding='utf-8', errors='ignore')\n",
+    "                for line in stream:\n",
+    "                    line_count += 1\n",
+    "                    if line_count % 1000000 == 0:\n",
+    "                        sys.stdout.write(f\"\\r      Lines: {line_count//1000000}M | New: {match_count} | Skipped: {skip_count}\")\n",
+    "                        sys.stdout.flush()\n",
+    "                    \n",
+    "                    try:\n",
+    "                        obj = json.loads(line)\n",
+    "                        sub = obj.get('subreddit', '').lower()\n",
+    "                        \n",
+    "                        if sub in task['targets']:\n",
+    "                            ts = int(obj.get('created_utc', 0))\n",
+    "                            \n",
+    "                            # --- THE SMART CHECK ---\n",
+    "                            # If this post is OLDER than what we have on file, SKIP IT\n",
+    "                            if ts <= progress_checkpoints.get(sub, 0):\n",
+    "                                skip_count += 1\n",
+    "                                continue\n",
+    "                            # -----------------------\n",
+    "\n",
+    "                            for release_ts in task['targets'][sub]:\n",
+    "                                if (release_ts - WINDOW_SECONDS) <= ts <= (release_ts + WINDOW_SECONDS):\n",
+    "                                    match_count += 1\n",
+    "                                    \n",
+    "                                    # Filename Logic\n",
+    "                                    if sub == \"theweeknd\": clean_name = \"TheWeeknd\"\n",
+    "                                    elif sub == \"drizzy\": clean_name = \"Drizzy\"\n",
+    "                                    elif sub == \"playboicarti\": clean_name = \"PlayboiCarti\"\n",
+    "                                    elif sub == \"sabrinacarpenter\": clean_name = \"SabrinaCarpenter\"\n",
+    "                                    elif sub == \"taylorswift\": clean_name = \"TaylorSwift\"\n",
+    "                                    elif sub == \"tameimpala\": clean_name = \"TameImpala\"\n",
+    "                                    else: clean_name = sub\n",
+    "                                    \n",
+    "                                    out_file = os.path.join(OUTPUT_DIR, f\"{clean_name}_MASTER.csv\")\n",
+    "                                    \n",
+    "                                    with open(out_file, 'a', newline='', encoding='utf-8') as csvfile:\n",
+    "                                        writer = csv.writer(csvfile)\n",
+    "                                        if not os.path.exists(out_file) or os.stat(out_file).st_size == 0:\n",
+    "                                            writer.writerow(['utc', 'text', 'score', 'album_date'])\n",
+    "                                        \n",
+    "                                        content = obj.get('body') or f\"{obj.get('title', '')} {obj.get('selftext', '')}\"\n",
+    "                                        clean_text = \" \".join(content.split())\n",
+    "                                        writer.writerow([ts, clean_text, obj.get('score', 0), release_ts])\n",
+    "                    except: continue\n",
+    "\n",
+    "    # D. CLEANUP\n",
+    "    print(f\"\\n   🧹 Deleting {task['month']} raw data...\")\n",
+    "    if os.path.exists(RAW_DIR): shutil.rmtree(RAW_DIR)\n",
+    "    print(f\" {task['month']} DONE.\")\n",
+    "\n",
+    "print(\"\\n ALL MONTHS COMPLETED! \")\n",
+    "# Keep-Alive Sound\n",
+    "from google.colab import output\n",
+    "output.eval_js('new Audio(\"https://upload.wikimedia.org/wikipedia/commons/0/05/Beep-09.ogg\").play()')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8394fb08",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1d0c46ac",
    "metadata": {
     "vscode": {
